# GillespieAlgorithm

./: CMakeLists.txt  gillespie.cu
headers/: utils.h
kernels/: gillespie_kernels.h
